I also find it hard to justify its uncommon rarity.
Adding Retain makes the Vulnerable more consistently relevant. The double debuff note is frequently a downside,
so I think this is okay.

False Life -> 8(9) on-play Temp HP.
While this card doesn't have the explosive possibility of Feast on Fear, it grants a lot of temp HP.
Tuning down its numbers just a little.

First Strike -> 10 damage upgraded, increases First Strike damage on upgrade
This is just for me to have fun.

Haste+ -> Exhaustive 2
This should incentivise getting at least 2 Dex before popping the first play. I love this card, but the upgraded form scales fast.
Bard's rares offer a lot of defensive options.

Heroism -> 4(6) Temporary HP
This card is a huge pile of good stuff. You can get both Temp. HP and Block(s) easily, as well as a burst of Inspiration.
The blue-green combo is useful in general, with a leading green for scaling.
Not to mention it can make half a Divine Protection.
Lowering the Temp HP should help.

Improv -> 4(3) Notes required
Improv is basically useless. This is my first try at increasing its viability -
if this fails, I'd be interested in seeing if a wildnote-related card would be alright.
Even if it was just "Queue 1(2) [wildnote]." Maybe it could even have no text.

Life Drain -> Ethereal, 8(10) damage
Life Drain is still super strong.
The Inspiration deck already increases Block, and capitalizing on that
with cards like Guard Point should be a key way to get defence.
Scaling out of control is okay, but I think Life Drain should
continue to carry some risk of some sort.
Adding Ethereal means you have to weight if you picked enough
high-value defense to allow playing it and keeping the temp HP over
between turns, especially early.

Off-Key -> 7(9) effects
Off-Key- was never worth taking, whereas if you had a camp ahead it was a key pick.
This should make the base effect a little better even with Riposte existing,
as well as nerfing the upgrade's huge swing.