@@ -51,3 +51,8 @@ Off-Key -> 7(9) effects
 Off-Key- was never worth taking, whereas if you had a camp ahead it was a key pick.
 This should make the base effect a little better even with Riposte existing,
 as well as nerfing the upgrade's huge swing.
+
+Power Word: Stun -> Ethereal, 50(66) HP.
+The 66 is just for my satisfaction.
+Ethereal so you have to make do with just the Debuff Note to 'carry' the card forwards
+until it's completely effective.
